--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -8,6 +8,38 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
+    <header class="header">
+      <div class="container">
+        <a class="logo" href="#">
+          <img class="logo-img" src="images/logo.png" alt="логотип" />
+        </a>
+
+        <nav class="menu">
+          <ul class="menu-list">
+            <li class="menu-item">
+              <a class="menu-link" href="#">Про нас</a>
+            </li>
+            <li class="menu-item">
+              <a class="menu-link" href="#">Каталог</a>
+            </li>
+            <li class="menu-item">
+              <a class="menu-link" href="#">Команда</a>
+            </li>
+            <li class="menu-item">
+              <a class="menu-link" href="#">Відгуки</a>
+            </li>
+            <li class="menu-item">
+              <a class="menu-link" href="#">Курси</a>
+            </li>
+            <li class="menu-item">
+              <a class="menu-link" href="#">Контакти</a>
+            </li>
+          </ul>
+        </nav>
+
+        <a class="phone" href="tel:4565789876">+45 65 78 98 76</a>
+      </div>
+    </header>
     <script src="js/main.js"></script>
   </body>
 </html>
