add content and footer markup

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>HM Candler - свічки із соєвого воску</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.css" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
@@ -40,6 +40,80 @@
         <a class="phone" href="tel:4565789876">+45 65 78 98 76</a>
       </div>
     </header>
+
+    <footer class="footer">
+      <div class="container">
+        <a class="logo" href="#">
+          <img class="logo-img" src="images/logo.png" alt="логотип" />
+        </a>
+
+        <nav class="menu">
+          <ul class="menu-list">
+            <li class="menu-item">
+              <a class="menu-link" href="#">Про нас</a>
+            </li>
+            <li class="menu-item">
+              <a class="menu-link" href="#">Каталог</a>
+            </li>
+            <li class="menu-item">
+              <a class="menu-link" href="#">Команда</a>
+            </li>
+            <li class="menu-item">
+              <a class="menu-link" href="#">Відгуки</a>
+            </li>
+            <li class="menu-item">
+              <a class="menu-link" href="#">Курси</a>
+            </li>
+            <li class="menu-item">
+              <a class="menu-link" href="#">Контакти</a>
+            </li>
+          </ul>
+        </nav>
+
+        <div class="footer-contacts">
+          <a class="phone" href="tel:4565789876">+45 65 78 98 76</a>
+          <a class="email" href="mailto:candelsCandels@gmail.com">candelsCandels@gmail.com</a>
+          <ul class="footer-social-list">
+            <li class="footer-social-item">
+              <a class="footer-social-link" href="#">
+                <img
+                  class="footer-social-img"
+                  src="images/logo-facebook.svg"
+                  alt="посилання на facebook"
+                />
+              </a>
+            </li>
+            <li class="footer-social-item">
+              <a class="footer-social-link" href="#">
+                <img
+                  class="footer-social-img"
+                  src="images/logo-instagram.svg"
+                  alt="посилання на instagram"
+                />
+              </a>
+            </li>
+            <li class="footer-social-item">
+              <a class="footer-social-link" href="#">
+                <img
+                  class="footer-social-img"
+                  src="images/logo-linkedin.svg"
+                  alt="посилання на linkedin"
+                />
+              </a>
+            </li>
+            <li class="footer-social-item">
+              <a class="footer-social-link" href="#">
+                <img
+                  class="footer-social-img"
+                  src="images/logo-youtube.svg"
+                  alt="посилання на youtube"
+                />
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </footer>
     <script src="js/main.js"></script>
   </body>
 </html>
