add header styles

--- a/index.html
+++ b/index.html
@@ -3,15 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@400,600,700&family=Roboto:wght@400&family=Yeseva+One&display=swap"
+      rel="stylesheet"
+    />
     <title>HM Candler - свічки із соєвого воску</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.css" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <header class="header">
-      <div class="container">
+      <div class="container header-inner">
         <a class="logo" href="#">
-          <img class="logo-img" src="images/logo.png" alt="логотип" />
+          <img class="logo-img" src="images/header-logo.png" alt="логотип" />
         </a>
 
         <nav class="menu">
@@ -44,7 +50,7 @@
     <footer class="footer">
       <div class="container">
         <a class="logo" href="#">
-          <img class="logo-img" src="images/logo.png" alt="логотип" />
+          <img class="logo-img" src="images/footer-logo.png" alt="логотип" />
         </a>
 
         <nav class="menu">
