add footer styles

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </header>
 
     <footer class="footer">
-      <div class="container">
+      <div class="container footer-inner">
         <a class="logo" href="#">
           <img class="logo-img" src="images/footer-logo.png" alt="логотип" />
         </a>
@@ -77,7 +77,7 @@
         </nav>
 
         <div class="footer-contacts">
-          <a class="phone" href="tel:4565789876">+45 65 78 98 76</a>
+          <a class="footer-phone" href="tel:4565789876">+45 65 78 98 76</a>
           <a class="email" href="mailto:candelsCandels@gmail.com">candelsCandels@gmail.com</a>
           <ul class="footer-social-list">
             <li class="footer-social-item">
