--- a/index.html
+++ b/index.html
@@ -20,8 +20,15 @@
           <img class="logo-img" src="images/header-logo.png" alt="логотип" />
         </a>
 
-        <nav class="menu">
-          <ul class="menu-list">
+        <nav class="menu header-menu">
+          <button class="menu-btn">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+          </button>
+          <ul class="menu-list header-menu-list">
             <li class="menu-item">
               <a class="menu-link" href="#">Про нас</a>
             </li>
@@ -53,8 +60,8 @@
           <img class="logo-img" src="images/footer-logo.png" alt="логотип" />
         </a>
 
-        <nav class="menu">
-          <ul class="menu-list">
+        <nav class="menu footer-menu">
+          <ul class="menu-list footer-menu-list">
             <li class="menu-item">
               <a class="menu-link" href="#">Про нас</a>
             </li>
