add content and markup for the top section

--- a/index.html
+++ b/index.html
@@ -54,6 +54,19 @@
       </div>
     </header>
 
+    <main class="main">
+      <section class="top">
+        <div class="container">
+          <h3 class="top-title">Створіть атмосферу затишку та гармонії!</h3>
+          <p class="top-text">
+            Створіть особливу атмосферу у своєму домі з нашою екологічно чистою та якісною
+            продукцією зі 100% натуральної соєвого воску.
+          </p>
+          <button class="top-buy">Купити</button>
+        </div>
+      </section>
+    </main>
+
     <footer class="footer">
       <div class="container footer-inner">
         <a class="logo" href="#">
