--- a/index.html
+++ b/index.html
@@ -56,13 +56,18 @@
 
     <main class="main">
       <section class="top">
-        <div class="container">
-          <h3 class="top-title">Створіть атмосферу затишку та гармонії!</h3>
-          <p class="top-text">
-            Створіть особливу атмосферу у своєму домі з нашою екологічно чистою та якісною
-            продукцією зі 100% натуральної соєвого воску.
-          </p>
-          <button class="top-buy">Купити</button>
+        <div class="container top-inner">
+          <div class="top-content">
+            <h3 class="top-title">Створіть атмосферу затишку та гармонії!</h3>
+            <p class="top-text">
+              Створіть особливу атмосферу у своєму домі з нашою екологічно чистою та якісною
+              продукцією зі 100% натуральної соєвого воску.
+            </p>
+            <button class="top-buy">Купити</button>
+          </div>
+          <picture class="top-img">
+            <img src="images/top-l.png" alt="" />
+          </picture>
         </div>
       </section>
     </main>
