--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <button class="top-buy">Купити</button>
           </div>
           <picture class="top-img">
-            <img src="images/top-l.png" alt="" />
+            <img class="top-img-l" src="images/top-l.png" alt="" />
           </picture>
         </div>
       </section>
