--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
             <button class="top-buy">Купити</button>
           </div>
           <picture class="top-img">
-            <img class="top-img-l" src="images/top-l.png" alt="" />
+            <source srcset="images/top-m.png" media="(max-width: 480px)" />
+            <!-- <img class="top-img-l" src="images/top-l.png" alt="" /> -->
+            <img class="top-image" src="images/top-l.png" alt="" />
           </picture>
         </div>
       </section>
