--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
             <button class="top-buy">Купити</button>
           </div>
           <picture class="top-img">
+            <source srcset="images/top-s.png" media="(max-width: 360px)" />
             <source srcset="images/top-m.png" media="(max-width: 480px)" />
+
             <!-- <img class="top-img-l" src="images/top-l.png" alt="" /> -->
             <img class="top-image" src="images/top-l.png" alt="" />
           </picture>
