add content and markup for the about section

--- a/index.html
+++ b/index.html
@@ -74,6 +74,39 @@
           </picture>
         </div>
       </section>
+
+      <section class="about">
+        <div class="container">
+          <div class="about-inner">
+            <div class="about-content">
+              <h2 class="about-title">Про нас</h2>
+              <p class="about-text">
+                Богдан творець бренду який завжди зацікавлений у виготовленні різноманітних речей
+                вдома. Він регулярно експериментував з різними матеріалами та інструментами,
+                спробувавши свої сили у багатьох галузях, включаючи виготовлення свічок.
+              </p>
+              <p class="about-text">
+                Ссоєвий віск виготовляють із соєвих бобів, що зрощуються в Данії, і цей вид воску є
+                екологічно чистим та безпечним для здоров'я.
+              </p>
+            </div>
+            <ul class="about-list">
+              <li class="about-item">
+                <img class="about-item-img" src="images/about-1.jpg" alt="" />
+                <p class="about-item-text">Насолоджуйтеся моментом</p>
+              </li>
+              <li class="about-item">
+                <img class="about-item-img" src="images/about-2.png" alt="" />
+                <p class="about-item-text">Створіть улюблену атмосферу</p>
+              </li>
+              <li class="about-item">
+                <img class="about-item-img" src="images/about-3.jpg" alt="" />
+                <p class="about-item-text">Виготовлені з любов'ю</p>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer class="footer">
