add about section styles for 768px

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <div class="container">
           <div class="about-inner">
             <div class="about-content">
-              <h2 class="about-title">Про нас</h2>
+              <h2 class="about-title title">Про нас</h2>
               <p class="about-text">
                 Богдан творець бренду який завжди зацікавлений у виготовленні різноманітних речей
                 вдома. Він регулярно експериментував з різними матеріалами та інструментами,
@@ -92,15 +92,15 @@
             </div>
             <ul class="about-list">
               <li class="about-item">
-                <img class="about-item-img" src="images/about-1.jpg" alt="" />
+                <img class="about-item-img about-item-img-1" src="images/about-1.jpg" alt="" />
                 <p class="about-item-text">Насолоджуйтеся моментом</p>
               </li>
               <li class="about-item">
-                <img class="about-item-img" src="images/about-2.png" alt="" />
+                <img class="about-item-img about-item-img-2" src="images/about-2.png" alt="" />
                 <p class="about-item-text">Створіть улюблену атмосферу</p>
               </li>
               <li class="about-item">
-                <img class="about-item-img" src="images/about-3.jpg" alt="" />
+                <img class="about-item-img about-item-img-3" src="images/about-3.jpg" alt="" />
                 <p class="about-item-text">Виготовлені з любов'ю</p>
               </li>
             </ul>
