--- a/index.html
+++ b/index.html
@@ -107,6 +107,60 @@
           </div>
         </div>
       </section>
+
+      <section class="products">
+        <div class="container">
+          <div class="section-inner">
+            <div class="products-descr section-descr">
+              <h2 class="products-title title">Наші товари</h2>
+              <p class="products-text section-text">
+                Ми використовуємо тільки найкращі якісні матеріали: соєвий віск, віскові барвники,
+                високоякісні ароматичні олії та бавовняні фітільці. Відтінки свічок дуже гармонійно
+                поєднуються з ароматом, створюючи незабутню атмосферу у вашому домі.
+              </p>
+            </div>
+            <div class="products-content products-descr">
+              <div class="products-item">
+                <img class="products-item-img" src="images/products-1.gpj" alt="" />
+                <p class="products-item-price">10$</p>
+                <h4 class="products-item-title">"Сердечко кохання"</h4>
+                <p class="products-item-text">
+                  Запах: ніжний аромат троянди та ванілі. Для чого: для атмосфери романтичного
+                  настрою
+                </p>
+                <button class="button">Купити</button>
+              </div>
+              <div class="products-item">
+                <img class="products-item-img" src="images/products-2.gpj" alt="" />
+                <p class="products-item-price">20$</p>
+                <h4 class="products-item-title">"Вихір кохання"</h4>
+                <p class="products-item-text">
+                  Запах: ніжний аромат лаванди. Для чого: для створення атмосфери затишку
+                </p>
+                <button class="button">Купити</button>
+              </div>
+              <div class="products-item">
+                <img class="products-item-img" src="images/products-3.gpj" alt="" />
+                <p class="products-item-price">10$</p>
+                <h4 class="products-item-title">"Веселка"</h4>
+                <p class="products-item-text">
+                  Запах: Свіжий аромат лайма. Для чого: для енергії та свіжості в приміщені.
+                </p>
+                <button class="button">Купити</button>
+              </div>
+              <div class="products-item">
+                <img class="products-item-img" src="images/products-4.gpj" alt="" />
+                <p class="products-item-price">10$</p>
+                <h4 class="products-item-title">"Жіноча чарівність"</h4>
+                <p class="products-item-text">
+                  Запах: ніжний аромат лаванди та фрезій. Для чого: для затишку та комфорту.
+                </p>
+                <button class="button">Купити</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer class="footer">
