--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         </div>
       </section>
 
-      <section class="products">
+      <section class="products section">
         <div class="container">
           <div class="section-inner">
             <div class="products-descr section-descr">
@@ -119,9 +119,9 @@
                 поєднуються з ароматом, створюючи незабутню атмосферу у вашому домі.
               </p>
             </div>
-            <div class="products-content products-descr">
+            <div class="products-content products-content-descr">
               <div class="products-item">
-                <img class="products-item-img" src="images/products-1.gpj" alt="" />
+                <img class="products-item-img" src="images/products-1.jpg" alt="" />
                 <p class="products-item-price">10$</p>
                 <h4 class="products-item-title">"Сердечко кохання"</h4>
                 <p class="products-item-text">
@@ -131,7 +131,7 @@
                 <button class="button">Купити</button>
               </div>
               <div class="products-item">
-                <img class="products-item-img" src="images/products-2.gpj" alt="" />
+                <img class="products-item-img" src="images/products-2.jpg" alt="" />
                 <p class="products-item-price">20$</p>
                 <h4 class="products-item-title">"Вихір кохання"</h4>
                 <p class="products-item-text">
@@ -140,7 +140,7 @@
                 <button class="button">Купити</button>
               </div>
               <div class="products-item">
-                <img class="products-item-img" src="images/products-3.gpj" alt="" />
+                <img class="products-item-img" src="images/products-3.jpg" alt="" />
                 <p class="products-item-price">10$</p>
                 <h4 class="products-item-title">"Веселка"</h4>
                 <p class="products-item-text">
@@ -149,7 +149,7 @@
                 <button class="button">Купити</button>
               </div>
               <div class="products-item">
-                <img class="products-item-img" src="images/products-4.gpj" alt="" />
+                <img class="products-item-img" src="images/products-4.jpg" alt="" />
                 <p class="products-item-price">10$</p>
                 <h4 class="products-item-title">"Жіноча чарівність"</h4>
                 <p class="products-item-text">
