separate the general section-decor section

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 екологічно чистим та безпечним для здоров'я.
               </p>
             </div>
-            <ul class="about-list">
+            <ul class="about-list section-decor">
               <li class="about-item">
                 <img class="about-item-img about-item-img-1" src="images/about-1.jpg" alt="" />
                 <p class="about-item-text">Насолоджуйтеся моментом</p>
