add section-decor for the products section

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 поєднуються з ароматом, створюючи незабутню атмосферу у вашому домі.
               </p>
             </div>
-            <div class="products-content products-content-descr">
+            <div class="products-content section-content-descr section-decor">
               <div class="products-item">
                 <img class="products-item-img" src="images/products-1.jpg" alt="" />
                 <p class="products-item-price">10$</p>
