додати контент та розмітку секції steps

--- a/index.html
+++ b/index.html
@@ -161,6 +161,91 @@
           </div>
         </div>
       </section>
+
+      <section class="steps section">
+        <div class="container">
+          <div class="section-inner">
+            <div class="steps-decr section-descr">
+              <h2 class="steps-title title">Етапи створення свічок</h2>
+              <p class="products-text section-text">
+                Створення свічки із соєвого воску може складатися з наступних етапів:
+              </p>
+            </div>
+
+            <ol class="steps-list section-content section-decor">
+              <li class="steps-item steps-item-odd">
+                <p class="steps-item-text">
+                  Підготовка матеріалів: дрібні фрагменти соєвого воску, фітіль для свічки,
+                  ароматизатори, барвники та інші додаткові матеріали.
+                </p>
+                <img class="steps-item-img" src="images/steps-1.jpg" alt="" />
+              </li>
+              <li class="steps-item steps-item-odd">
+                <p class="steps-item-text">
+                  Підготовка форми: вибір форми для свічки та підготовка її до наповнення воском.
+                </p>
+                <img class="steps-item-img" src="images/steps-2.jpg" alt="" />
+              </li>
+              <li class="steps-item steps-item-even">
+                <img class="steps-item-img" src="images/steps-3.jpg" alt="" />
+                <p class="steps-item-text">
+                  Приготування воску: розплавлення соєвого воску у плавильному пристрої до потрібної
+                  температури. Додавання ароматизаторів та барвників за необхідності.
+                </p>
+              </li>
+              <li class="steps-item steps-item-even">
+                <img class="steps-item-img" src="images/steps-4.jpg" alt="" />
+                <p class="steps-item-text">
+                  Підготовка фітіля: вставлення фітіля до форми та зафіксування його так, щоб він
+                  був рівномірно напружений.
+                </p>
+              </li>
+              <li class="steps-item steps-item-odd">
+                <p class="steps-item-text">
+                  Підготовка матеріалів: дрібні фрагменти соєвого воску, фітіль для свічки,
+                  ароматизатори, барвники та інші додаткові матеріали.
+                </p>
+                <img class="steps-item-img" src="images/steps-5.jpg" alt="" />
+              </li>
+              <li class="steps-item steps-item-odd">
+                <p class="steps-item-text">
+                  Наповнення форми: воск налити до форми, поки вона не заповниться повністю. Чекати,
+                  доки він затвердіє.
+                </p>
+                <img class="steps-item-img" src="images/steps-6" alt="" />
+              </li>
+              <li class="steps-item steps-item-even">
+                <img class="steps-item-img" src="images/steps-7.jpg" alt="" />
+                <p class="steps-item-text">
+                  Приготування воску: розплавлення соєвого воску у плавильному пристрої до потрібної
+                  температури. Додавання ароматизаторів та барвників за необхідності.
+                </p>
+              </li>
+              <li class="steps-item steps-item-even">
+                <img class="steps-item-img" src="images/steps-8.jpg" alt="" />
+                <p class="steps-item-text">
+                  Підготовка фітіля: вставлення фітіля до форми та зафіксування його так, щоб він
+                  був рівномірно напружений.
+                </p>
+              </li>
+              <li class="steps-item steps-item-odd">
+                <p class="steps-item-text">
+                  Підготовка матеріалів: дрібні фрагменти соєвого воску, фітіль для свічки,
+                  ароматизатори, барвники та інші додаткові матеріали.
+                </p>
+                <img class="steps-item-img" src="images/steps-9.jpg" alt="" />
+              </li>
+              <li class="steps-item steps-item-odd">
+                <p class="steps-item-text">
+                  Наповнення форми: воск налити до форми, поки вона не заповниться повністю. Чекати,
+                  доки він затвердіє.
+                </p>
+                <img class="steps-item-img" src="images/steps-10.jpg" alt="" />
+              </li>
+            </ol>
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer class="footer">
