--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
               </p>
             </div>
 
-            <ol class="steps-list section-content section-decor">
+            <ol class="steps-list section-content-descr section-decor">
               <li class="steps-item steps-item-odd">
                 <p class="steps-item-text">
                   Підготовка матеріалів: дрібні фрагменти соєвого воску, фітіль для свічки,
@@ -212,7 +212,7 @@
                   Наповнення форми: воск налити до форми, поки вона не заповниться повністю. Чекати,
                   доки він затвердіє.
                 </p>
-                <img class="steps-item-img" src="images/steps-6" alt="" />
+                <img class="steps-item-img" src="images/steps-6.jpg" alt="" />
               </li>
               <li class="steps-item steps-item-even">
                 <img class="steps-item-img" src="images/steps-7.jpg" alt="" />
