add content and markup for the courses section

--- a/index.html
+++ b/index.html
@@ -246,6 +246,49 @@
           </div>
         </div>
       </section>
+
+      <section class="courses section">
+        <div class="container">
+          <div class="section-inner">
+            <div class="courses-decr section-descr">
+              <h2 class="courses-title title">Наші курси</h2>
+              <p class="courses-text section-text">
+                Наші курси дозволяють зробити перший крок в новій кар'єрі або поглибити знання в
+                своїй галузі, розвиватися як професіонал, а також покращити якість свого життя.
+              </p>
+            </div>
+
+            <div class="products-content section-content-descr section-decor">
+              <div class="products-item">
+                <div class="courses-item-img">
+                  <img class="products-item-img" src="images/courses-1.jpg" alt="" />
+                  <p class="courses-title">Основи виготовлення свічок</p>
+                  <p class="courses-time">Навчання <span>- 20 год</span></p>
+                  <p class="courses-price">Ціна - 40$</p>
+                </div>
+                <h4 class="products-item-title">Основи виготовлення свічок</h4>
+                <p class="products-item-text">
+                  Будем навчати основам виготовлення свічок з різних матеріалів.
+                </p>
+                <button class="button">Купити курс</button>
+              </div>
+              <div class="products-item">
+                <div class="courses-item-img">
+                  <img class="products-item-img" src="images/courses-2.jpg" alt="" />
+                  <p class="courses-title">Мистецтво ароматерапії</p>
+                  <p class="courses-time">Навчання <span>- 20 год</span></p>
+                  <p class="courses-price">Ціна - 40$</p>
+                </div>
+                <h4 class="products-item-title">Мистецтво ароматерапії</h4>
+                <p class="products-item-text">
+                  Будем вивчати мистецтво ароматерапії та виготовлення свічок з різними ароматами.
+                </p>
+                <button class="button">Купити курс</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer class="footer">
