adapt the courses section

--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
               <div class="products-item">
                 <div class="courses-item-img">
                   <img class="products-item-img" src="images/courses-1.jpg" alt="" />
-                  <p class="courses-title">Основи виготовлення свічок</p>
+                  <p class="courses-item-title">Основи виготовлення свічок</p>
                   <p class="courses-time">Навчання <span>- 20 год</span></p>
                   <p class="courses-price">Ціна - 40$</p>
                 </div>
@@ -275,7 +275,7 @@
               <div class="products-item">
                 <div class="courses-item-img">
                   <img class="products-item-img" src="images/courses-2.jpg" alt="" />
-                  <p class="courses-title">Мистецтво ароматерапії</p>
+                  <p class="courses-item-title">Мистецтво ароматерапії</p>
                   <p class="courses-time">Навчання <span>- 20 год</span></p>
                   <p class="courses-price">Ціна - 40$</p>
                 </div>
