add styles for the team section

--- a/index.html
+++ b/index.html
@@ -303,28 +303,28 @@
 
             <div class="team-content section-content-descr">
               <div class="team-item">
-                <img class="tem-img" src="images/team-1.jpg" alt="" />
+                <img class="team-img" src="images/team-1.jpg" alt="" />
                 <div class="team-item-box">
                   <p class="team-item-name">Викладач Богдан</p>
                   <p class="team-item-descr">Має досвід викладання і роботи 4 роки</p>
                 </div>
               </div>
               <div class="team-item">
-                <img class="tem-img" src="images/team-2.jpg" alt="" />
+                <img class="team-img" src="images/team-2.jpg" alt="" />
                 <div class="team-item-box">
                   <p class="team-item-name">Викладач Анна</p>
                   <p class="team-item-descr">Має досвід викладання і роботи 6 років</p>
                 </div>
               </div>
               <div class="team-item">
-                <img class="tem-img" src="images/team-3.jpg" alt="" />
+                <img class="team-img" src="images/team-3.jpg" alt="" />
                 <div class="team-item-box">
                   <p class="team-item-name">Викладач Галина</p>
                   <p class="team-item-descr">Навчає сфері дизайну та декорування</p>
                 </div>
               </div>
               <div class="team-item">
-                <img class="tem-img" src="images/team-4.jpg" alt="" />
+                <img class="team-img" src="images/team-4.jpg" alt="" />
                 <div class="team-item-box">
                   <p class="team-item-name">Маркетолог Ольга</p>
                   <p class="team-item-descr">Допоможе вам з рекламою</p>
