add common markup for feedback, certificates, questions sections

--- a/index.html
+++ b/index.html
@@ -334,6 +334,41 @@
           </div>
         </div>
       </section>
+
+      <section class="feedback section">
+        <div class="container">
+          <div class="section-inner">
+            <div class="section-descr">
+              <h2 class="title"></h2>
+              <p class="section-text"></p>
+            </div>
+            <div class="feedback-content section-content-descr section-decor"></div>
+          </div>
+        </div>
+      </section>
+
+      <section class="certificates section">
+        <div class="container">
+          <div class="section-inner">
+            <div class="section-descr">
+              <h2 class="title"></h2>
+              <p class="section-text"></p>
+            </div>
+            <div class="certificates-content section-content-descr section-decor"></div>
+          </div>
+        </div>
+      </section>
+
+      <section class="questions section">
+        <div class="container">
+          <div class="section-inner">
+            <div class="section-descr">
+              <h2 class="title"></h2>
+            </div>
+            <div class="questions-content section-content-descr"></div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer class="footer">
