--- a/index.html
+++ b/index.html
@@ -339,8 +339,12 @@
         <div class="container">
           <div class="section-inner">
             <div class="section-descr">
-              <h2 class="title"></h2>
-              <p class="section-text"></p>
+              <h2 class="title">Відгуки від клієнтів</h2>
+              <p class="section-text">
+                Наші покупці мають різний вік, статус, заняття і інтереси, але у них є одна спільна
+                риса - вони прагнуть до гармонії і знаходять радість у маленьких радощах життя, які
+                створюють атмосферу затишку та гармонії у їхньому домі.
+              </p>
             </div>
             <div class="feedback-content section-content-descr section-decor"></div>
           </div>
@@ -351,8 +355,10 @@
         <div class="container">
           <div class="section-inner">
             <div class="section-descr">
-              <h2 class="title"></h2>
-              <p class="section-text"></p>
+              <h2 class="title">Сертифікати</h2>
+              <p class="section-text">
+                Сертифікати забезпечують додаткову довіру та впевненість для наших клієнтів.
+              </p>
             </div>
             <div class="certificates-content section-content-descr section-decor"></div>
           </div>
@@ -363,7 +369,7 @@
         <div class="container">
           <div class="section-inner">
             <div class="section-descr">
-              <h2 class="title"></h2>
+              <h2 class="title">Часті запитання</h2>
             </div>
             <div class="questions-content section-content-descr"></div>
           </div>
