--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     />
     <title>HM Candler - свічки із соєвого воску</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
@@ -346,7 +347,40 @@
                 створюють атмосферу затишку та гармонії у їхньому домі.
               </p>
             </div>
-            <div class="feedback-content section-content-descr section-decor"></div>
+            <div class="feedback-content section-decor">
+              <div class="feedback-slider">
+                <div class="swiper-wrapper">
+                  <div class="swiper-slide">
+                    <div class="feedback-item">
+                      <div class="feedback-item-video">
+                        <img class="feedback-item-img" src="images/feedback-slide.jpg" alt="" />
+                        <button class="feedback-item-videobtn">
+                          <img src="images/btn.svg" alt="" />
+                        </button>
+                      </div>
+                      <div class="feedback-item-content">
+                        <a class="feedback-item-social-link" href="#">
+                          <img src="images/logo-instagram.svg" alt="" />
+                        </a>
+                        <p class="feedback-item-name">Іван Пилипенко</p>
+                        <p class="feedback-item-text">
+                          Я замовив свічку в формі сердечка на День Святого Валентина для моєї
+                          дівчини і вона була просто неймовірна! Запах був дуже приємним і
+                          романтичним, а форма сердечка була досконалою для цього свята. Моя дівчина
+                          була дуже задоволена подарунком, і я точно замовлю ще свічок від цього
+                          сайту!"
+                        </p>
+                        <button class="button feedback-item-btn">Купити цей товар</button>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="swiper-slide">Slide 2</div>
+                  <div class="swiper-slide">Slide 3</div>
+                  <div class="swiper-slide">Slide 4</div>
+                </div>
+                <div class="swiper-pagination"></div>
+              </div>
+            </div>
           </div>
         </div>
       </section>
@@ -450,6 +484,8 @@
         </div>
       </div>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
