--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
       <section class="feedback section">
         <div class="container">
           <div class="section-inner">
-            <div class="section-descr">
+            <div class="feedback-descr section-descr">
               <h2 class="title">Відгуки від клієнтів</h2>
               <p class="section-text">
                 Наші покупці мають різний вік, статус, заняття і інтереси, але у них є одна спільна
@@ -374,9 +374,80 @@
                       </div>
                     </div>
                   </div>
-                  <div class="swiper-slide">Slide 2</div>
-                  <div class="swiper-slide">Slide 3</div>
-                  <div class="swiper-slide">Slide 4</div>
+                  <div class="swiper-slide">
+                    <div class="feedback-item">
+                      <div class="feedback-item-video">
+                        <img class="feedback-item-img" src="images/feedback-slide.jpg" alt="" />
+                        <button class="feedback-item-videobtn">
+                          <img src="images/btn.svg" alt="" />
+                        </button>
+                      </div>
+                      <div class="feedback-item-content">
+                        <a class="feedback-item-social-link" href="#">
+                          <img src="images/logo-instagram.svg" alt="" />
+                        </a>
+                        <p class="feedback-item-name">Іван Пилипенко</p>
+                        <p class="feedback-item-text">
+                          Я замовив свічку в формі сердечка на День Святого Валентина для моєї
+                          дівчини і вона була просто неймовірна! Запах був дуже приємним і
+                          романтичним, а форма сердечка була досконалою для цього свята. Моя дівчина
+                          була дуже задоволена подарунком, і я точно замовлю ще свічок від цього
+                          сайту!"
+                        </p>
+                        <button class="button feedback-item-btn">Купити цей товар</button>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="swiper-slide">
+                    <div class="feedback-item">
+                      <div class="feedback-item-video">
+                        <img class="feedback-item-img" src="images/feedback-slide.jpg" alt="" />
+                        <button class="feedback-item-videobtn">
+                          <img src="images/btn.svg" alt="" />
+                        </button>
+                      </div>
+                      <div class="feedback-item-content">
+                        <a class="feedback-item-social-link" href="#">
+                          <img src="images/logo-instagram.svg" alt="" />
+                        </a>
+                        <p class="feedback-item-name">Іван Пилипенко</p>
+                        <p class="feedback-item-text">
+                          Я замовив свічку в формі сердечка на День Святого Валентина для моєї
+                          дівчини і вона була просто неймовірна! Запах був дуже приємним і
+                          романтичним, а форма сердечка була досконалою для цього свята. Моя дівчина
+                          була дуже задоволена подарунком, і я точно замовлю ще свічок від цього
+                          сайту!"
+                        </p>
+                        <button class="button feedback-item-btn">Купити цей товар</button>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="swiper-slide">
+                    <div class="feedback-item">
+                      <div class="feedback-item-video">
+                        <img class="feedback-item-img" src="images/feedback-slide.jpg" alt="" />
+                        <button class="feedback-item-videobtn">
+                          <img src="images/btn.svg" alt="" />
+                        </button>
+                      </div>
+                      <div class="feedback-item-content">
+                        <a class="feedback-item-social-link" href="#">
+                          <img src="images/logo-instagram.svg" alt="" />
+                        </a>
+                        <p class="feedback-item-name">Іван Пилипенко</p>
+                        <p class="feedback-item-text">
+                          Я замовив свічку в формі сердечка на День Святого Валентина для моєї
+                          дівчини і вона була просто неймовірна! Запах був дуже приємним і
+                          романтичним, а форма сердечка була досконалою для цього свята. Моя дівчина
+                          була дуже задоволена подарунком, і я точно замовлю ще свічок від цього
+                          сайту!"
+                        </p>
+                        <button class="button feedback-item-btn">Купити цей товар</button>
+                      </div>
+                    </div>
+                  </div>
                 </div>
                 <div class="swiper-pagination"></div>
               </div>
