add content to the certificates-content block

--- a/index.html
+++ b/index.html
@@ -465,7 +465,25 @@
                 Сертифікати забезпечують додаткову довіру та впевненість для наших клієнтів.
               </p>
             </div>
-            <div class="certificates-content section-content-descr section-decor"></div>
+            <div class="certificates-content section-decor">
+              <div class="certificates-slider">
+                <div class="swiper-wrapper">
+                  <div class="swiper-slide">
+                    <img class="certificates-img" src="images/certificate-1.jpg" alt="" />
+                  </div>
+                  <div class="swiper-slide">
+                    <img class="certificates-img" src="images/certificate-2.jpg" alt="" />
+                  </div>
+                  <div class="swiper-slide">
+                    <img class="certificates-img" src="images/certificate-1.jpg" alt="" />
+                  </div>
+                  <div class="swiper-slide">
+                    <img class="certificates-img" src="images/certificate-2.jpg" alt="" />
+                  </div>
+                </div>
+                <div class="swiper-pagination"></div>
+              </div>
+            </div>
           </div>
         </div>
       </section>
