add certificates section styles, connect certificates-slider

--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
       <section class="certificates section">
         <div class="container">
           <div class="section-inner">
-            <div class="section-descr">
+            <div class="certificates-descr section-descr">
               <h2 class="title">Сертифікати</h2>
               <p class="section-text">
                 Сертифікати забезпечують додаткову довіру та впевненість для наших клієнтів.
