adapt feedback and certificates sections

--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
 
       <section class="feedback section">
         <div class="container">
-          <div class="section-inner">
+          <div class="feedback-inner section-inner">
             <div class="feedback-descr section-descr">
               <h2 class="title">Відгуки від клієнтів</h2>
               <p class="section-text">
