add content to the promo section

--- a/index.html
+++ b/index.html
@@ -498,6 +498,15 @@
           </div>
         </div>
       </section>
+
+      <section class="promo">
+        <div class="container">
+          <div class="promo-inner">
+            <p class="promo-text">Купуйте більше, економте більше</p>
+            <a class="promo-link" href="#">В каталог</a>
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer class="footer">
