add content to the contacts section

--- a/index.html
+++ b/index.html
@@ -507,6 +507,20 @@
           </div>
         </div>
       </section>
+
+      <section class="contacts">
+        <div class="container">
+          <div class="contacts-inner">
+            <form class="form">
+              <p class="form-title">Підпишись на наші акції</p>
+              <input class="form-input" type="text" placeholder="Імя" />
+              <input class="form-input" type="email" placeholder="Е-mail" />
+              <button class="form-btn" type="submit">Підписатись</button>
+            </form>
+            <img class="contacts-img" src="images/contacts.jpg" alt="" />
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer class="footer">
