--- a/index.html
+++ b/index.html
@@ -494,7 +494,235 @@
             <div class="section-descr">
               <h2 class="title">Часті запитання</h2>
             </div>
-            <div class="questions-content section-content-descr"></div>
+            <div class="questions-content">
+              <div class="accordeon">
+                <div class="accordeon-item">
+                  <button class="accordeon-title">Які запахи доступні для свічок?</button>
+                  <div class="accordeon-text">
+                    <ol>
+                      <li>
+                        Ваніль - теплий, сладкий і затишний аромат, який нагадує про домашній
+                        затишок.
+                      </li>
+                      <li>
+                        Лаванда - приємний, успокійливий і релаксуючий запах, який допомагає зняти
+                        стрес і напругу.
+                      </li>
+                      <li>
+                        Рожевий грейпфрут - свіжий, фруктовий і енергійний аромат, який допомагає
+                        підняти настрій і збадьорити.
+                      </li>
+                      <li>
+                        Кедр - деревний, земний і маскулінний аромат, який надає відчуття
+                        стабільності і надійності.
+                      </li>
+                      <li>
+                        Яблуко і кориця - теплий і затишний аромат, який нагадує про зимові свята і
+                        домашність.
+                      </li>
+                    </ol>
+                  </div>
+                </div>
+
+                <div class="accordeon-item">
+                  <button class="accordeon-title">Як довго горять свічки?</button>
+                  <div class="accordeon-text">
+                    <ol>
+                      <li>
+                        Ваніль - теплий, сладкий і затишний аромат, який нагадує про домашній
+                        затишок.
+                      </li>
+                      <li>
+                        Лаванда - приємний, успокійливий і релаксуючий запах, який допомагає зняти
+                        стрес і напругу.
+                      </li>
+                      <li>
+                        Рожевий грейпфрут - свіжий, фруктовий і енергійний аромат, який допомагає
+                        підняти настрій і збадьорити.
+                      </li>
+                      <li>
+                        Кедр - деревний, земний і маскулінний аромат, який надає відчуття
+                        стабільності і надійності.
+                      </li>
+                      <li>
+                        Яблуко і кориця - теплий і затишний аромат, який нагадує про зимові свята і
+                        домашність.
+                      </li>
+                    </ol>
+                  </div>
+                </div>
+
+                <div class="accordeon-item">
+                  <button class="accordeon-title">
+                    Чи можна зробити замовлення на індивідуальний дизайн свічки?
+                  </button>
+                  <div class="accordeon-text">
+                    <ol>
+                      <li>
+                        Ваніль - теплий, сладкий і затишний аромат, який нагадує про домашній
+                        затишок.
+                      </li>
+                      <li>
+                        Лаванда - приємний, успокійливий і релаксуючий запах, який допомагає зняти
+                        стрес і напругу.
+                      </li>
+                      <li>
+                        Рожевий грейпфрут - свіжий, фруктовий і енергійний аромат, який допомагає
+                        підняти настрій і збадьорити.
+                      </li>
+                      <li>
+                        Кедр - деревний, земний і маскулінний аромат, який надає відчуття
+                        стабільності і надійності.
+                      </li>
+                      <li>
+                        Яблуко і кориця - теплий і затишний аромат, який нагадує про зимові свята і
+                        домашність.
+                      </li>
+                    </ol>
+                  </div>
+                </div>
+
+                <div class="accordeon-item">
+                  <button class="accordeon-title">Які є варіанти доставки?</button>
+                  <div class="accordeon-text">
+                    <ol>
+                      <li>
+                        Ваніль - теплий, сладкий і затишний аромат, який нагадує про домашній
+                        затишок.
+                      </li>
+                      <li>
+                        Лаванда - приємний, успокійливий і релаксуючий запах, який допомагає зняти
+                        стрес і напругу.
+                      </li>
+                      <li>
+                        Рожевий грейпфрут - свіжий, фруктовий і енергійний аромат, який допомагає
+                        підняти настрій і збадьорити.
+                      </li>
+                      <li>
+                        Кедр - деревний, земний і маскулінний аромат, який надає відчуття
+                        стабільності і надійності.
+                      </li>
+                      <li>
+                        Яблуко і кориця - теплий і затишний аромат, який нагадує про зимові свята і
+                        домашність.
+                      </li>
+                    </ol>
+                  </div>
+                </div>
+
+                <div class="accordeon-item">
+                  <button class="accordeon-title">Як оплачувати замовлення?</button>
+                  <div class="accordeon-text">
+                    <ol>
+                      <li>
+                        Ваніль - теплий, сладкий і затишний аромат, який нагадує про домашній
+                        затишок.
+                      </li>
+                      <li>
+                        Лаванда - приємний, успокійливий і релаксуючий запах, який допомагає зняти
+                        стрес і напругу.
+                      </li>
+                      <li>
+                        Рожевий грейпфрут - свіжий, фруктовий і енергійний аромат, який допомагає
+                        підняти настрій і збадьорити.
+                      </li>
+                      <li>
+                        Кедр - деревний, земний і маскулінний аромат, який надає відчуття
+                        стабільності і надійності.
+                      </li>
+                      <li>
+                        Яблуко і кориця - теплий і затишний аромат, який нагадує про зимові свята і
+                        домашність.
+                      </li>
+                    </ol>
+                  </div>
+                </div>
+
+                <div class="accordeon-item">
+                  <button class="accordeon-title">Як довго триває курс?</button>
+                  <div class="accordeon-text">
+                    <ol>
+                      <li>
+                        Ваніль - теплий, сладкий і затишний аромат, який нагадує про домашній
+                        затишок.
+                      </li>
+                      <li>
+                        Лаванда - приємний, успокійливий і релаксуючий запах, який допомагає зняти
+                        стрес і напругу.
+                      </li>
+                      <li>
+                        Рожевий грейпфрут - свіжий, фруктовий і енергійний аромат, який допомагає
+                        підняти настрій і збадьорити.
+                      </li>
+                      <li>
+                        Кедр - деревний, земний і маскулінний аромат, який надає відчуття
+                        стабільності і надійності.
+                      </li>
+                      <li>
+                        Яблуко і кориця - теплий і затишний аромат, який нагадує про зимові свята і
+                        домашність.
+                      </li>
+                    </ol>
+                  </div>
+                </div>
+
+                <div class="accordeon-item">
+                  <button class="accordeon-title">Яка ціна на курс?</button>
+                  <div class="accordeon-text">
+                    <ol>
+                      <li>
+                        Ваніль - теплий, сладкий і затишний аромат, який нагадує про домашній
+                        затишок.
+                      </li>
+                      <li>
+                        Лаванда - приємний, успокійливий і релаксуючий запах, який допомагає зняти
+                        стрес і напругу.
+                      </li>
+                      <li>
+                        Рожевий грейпфрут - свіжий, фруктовий і енергійний аромат, який допомагає
+                        підняти настрій і збадьорити.
+                      </li>
+                      <li>
+                        Кедр - деревний, земний і маскулінний аромат, який надає відчуття
+                        стабільності і надійності.
+                      </li>
+                      <li>
+                        Яблуко і кориця - теплий і затишний аромат, який нагадує про зимові свята і
+                        домашність.
+                      </li>
+                    </ol>
+                  </div>
+                </div>
+
+                <div class="accordeon-item">
+                  <button class="accordeon-title">Чи є сертифікат на курс?</button>
+                  <div class="accordeon-text">
+                    <ol>
+                      <li>
+                        Ваніль - теплий, сладкий і затишний аромат, який нагадує про домашній
+                        затишок.
+                      </li>
+                      <li>
+                        Лаванда - приємний, успокійливий і релаксуючий запах, який допомагає зняти
+                        стрес і напругу.
+                      </li>
+                      <li>
+                        Рожевий грейпфрут - свіжий, фруктовий і енергійний аромат, який допомагає
+                        підняти настрій і збадьорити.
+                      </li>
+                      <li>
+                        Кедр - деревний, земний і маскулінний аромат, який надає відчуття
+                        стабільності і надійності.
+                      </li>
+                      <li>
+                        Яблуко і кориця - теплий і затишний аромат, який нагадує про зимові свята і
+                        домашність.
+                      </li>
+                    </ol>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </section>
