--- a/index.html
+++ b/index.html
@@ -499,28 +499,30 @@
                 <div class="accordeon-item">
                   <button class="accordeon-title">Які запахи доступні для свічок?</button>
                   <div class="accordeon-text">
-                    <ol>
-                      <li>
-                        Ваніль - теплий, сладкий і затишний аромат, який нагадує про домашній
-                        затишок.
-                      </li>
-                      <li>
-                        Лаванда - приємний, успокійливий і релаксуючий запах, який допомагає зняти
-                        стрес і напругу.
-                      </li>
-                      <li>
-                        Рожевий грейпфрут - свіжий, фруктовий і енергійний аромат, який допомагає
-                        підняти настрій і збадьорити.
-                      </li>
-                      <li>
-                        Кедр - деревний, земний і маскулінний аромат, який надає відчуття
-                        стабільності і надійності.
-                      </li>
-                      <li>
-                        Яблуко і кориця - теплий і затишний аромат, який нагадує про зимові свята і
-                        домашність.
-                      </li>
-                    </ol>
+                    <div class="accordeon-text-box">
+                      <ol>
+                        <li>
+                          Ваніль - теплий, сладкий і затишний аромат, який нагадує про домашній
+                          затишок.
+                        </li>
+                        <li>
+                          Лаванда - приємний, успокійливий і релаксуючий запах, який допомагає зняти
+                          стрес і напругу.
+                        </li>
+                        <li>
+                          Рожевий грейпфрут - свіжий, фруктовий і енергійний аромат, який допомагає
+                          підняти настрій і збадьорити.
+                        </li>
+                        <li>
+                          Кедр - деревний, земний і маскулінний аромат, який надає відчуття
+                          стабільності і надійності.
+                        </li>
+                        <li>
+                          Яблуко і кориця - теплий і затишний аромат, який нагадує про зимові свята
+                          і домашність.
+                        </li>
+                      </ol>
+                    </div>
                   </div>
                 </div>
 
